--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+body { font-family: "Poppins", sans-serif;
+  font-weight: 400;}
+table { width:100%; height:100%; border:1px solid #000; border-collapse:collapse;}
+table td { padding:3px 10px;}
+thead { background:#c0504d; color:#fff;}
+tbody:nth-child(1) { background:#f3deb9; color:#000;}
+tbody:nth-child(2) { background:#f2dcdb; color:#000;}
+tbody:nth-child(3) { background:#d9d9d9; color:#000;}
+
+
